# wcx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
headers/: count.h  fatal.h  options.h
sources/: count.c  main.c  options.c
src/: fatal.h  main.c  options.h
